docs: fix Header UI inconsistency (#16464)
* fix: Header UI inconsistency

* fix: unexpected empty line

* fix: additional class

* fix: design break on mobile size

* fix: UI of other pages on docs

--- a/docs/src/assets/scss/docs-header.scss
+++ b/docs/src/assets/scss/docs-header.scss
@@ -12,9 +12,13 @@
         padding-bottom: 0;
         padding-block-start: 0;
         padding-block-end: 0;
+        max-width: 1700px;
 
         @media all and (min-width: 1024px) {
             justify-content: space-between;
+        }
+        @media all and (min-width: 1700px) {
+            margin: auto;
         }
     }
 }
